--- a/powerapps-docs/maker/TOC.yml
+++ b/powerapps-docs/maker/TOC.yml
@@ -1050,7 +1050,7 @@
       href: ./model-driven-apps/app-for-outlook-customize.md
     - name: 開発者向け
       href: ../developer/model-driven-apps/overview.md
-- name: ポータル (プレビュー)
+- name: ポータル
   items:
     - name: PowerApps ポータルとは
       href: ./portals/overview.md
@@ -1058,9 +1058,9 @@
       items:
         - name: ポータルのテンプレート
           href: ./portals/portal-templates.md
-        - name: ポータルを作成する
+        - name: スターター ポータルを作成する
           href: ./portals/create-portal.md
-        - name: Dynamics 365 ポータルを作成する
+        - name: Dynamics 365 環境でポータルを作成する
           href: ./portals/create-dynamics-portal.md
         - name: ポータル デザイナーの構造
           href: ./portals/portal-designer-anatomy.md
@@ -1072,10 +1072,10 @@
           href: ./portals/compose-page.md
         - name: テンプレートを操作する
           href: ./portals/work-with-templates.md
+        - name: CSS の編集
+          href: ./portals/edit-css.md
     - name: 既存のポータルを管理する
       href: ./portals/manage-existing-portals.md
-    - name: サイト設定を構成する
-      href: ./portals/configure-site-settings.md
     - name: ポータルの高度な管理
       items:
         - name: 概要
@@ -1108,8 +1108,16 @@
           href: ./portals/admin/update-portal-domain.md
         - name: サーバー側キャッシュのクリア
           href: ./portals/admin/clear-server-side-cache.md
-        - name: Dynamics 365 ポータル構成の移行
+        - name: ポータルの構成を移行する
           href: ./portals/admin/migrate-portal-configuration.md
+        - name: ポータルのライフサイクルについて
+          href: ./portals/admin/portal-lifecycle.md
+    - name: 高度なポータルの構成
+      items:
+        - name: 概要
+          href: ./portals/configure/configure-portal.md
+        - name: サイト設定を構成する
+          href: ./portals/configure/configure-site-settings.md
     - name: 高度なポータルのカスタマイズ
       items:
         - name: 液体テンプレートを操作する
@@ -1156,6 +1164,18 @@
                   href: ./portals/liquid/render-site-header-primary-navigation.md
         - name: OAuth 2.0 の暗黙の許可フロー
           href: ./portals/oauth-implicit-grant-flow.md
+    - name: ポータルのドキュメント ストレージ
+      items:
+        - name: メモの構成
+          href: ./portals/configure-notes.md
+        - name: Azure Storage
+          items:
+            - name: Azure Storage を有効にする
+              href: ./portals/enable-azure-storage.md
+            - name: Azure Storage Web リソースをフォームに追加する
+              href: ./portals/add-web-resource.md
+        - name: SharePoint ドキュメントの管理
+          href: ./portals/manage-sharepoint-documents.md
     - name: 既知の問題
       href: ./portals/known-issues.md
     - name: PowerApps ポータルに関する FAQ
